--- a/.env.dist
+++ b/.env.dist
@@ -1,4 +1,4 @@
 bot_token=meow.meow.lol
-pxlslog_explorer_dir=file_path
+pxlslog_explorer_dir=D:path/to/your/pxlslog-explorer/target/release
 owner_id=an_integer
 update_channel_id=also_an_integer
