--- a/.env.dist
+++ b/.env.dist
@@ -2,3 +2,5 @@ bot_token=meow.meow.lol
 pxlslog_explorer_dir=D:path/to/your/pxlslog-explorer/target/release
 owner_id=an_integer
 update_channel_id=also_an_integer
+admin_server_id=another_integer
+dev_server_id=some_other_integer
