--- a/.env.dist
+++ b/.env.dist
@@ -1,6 +1,6 @@
-bot_token=meow.meow.lol
-pxlslog_explorer_dir=D:path/to/your/pxlslog-explorer/target/release
-owner_id=an_integer
-update_channel_id=also_an_integer
-admin_server_id=another_integer
-dev_server_id=some_other_integer
+BOT_TOKEN=meow.meow.lol
+PXLSLOG_EXPLORER_DIR=D:path/to/your/pxlslog-explorer/target/release
+OWNER_ID=an_integer
+UPDATE_CHANNEL_ID=also_an_integer
+ADMIN_SERVER_ID=another_integer
+DEV_SERVER_ID=some_other_integer
